# tabu-self-driving-car

./: README.md  pyproject.toml
src/: app.py  constants.py  inference_catboost.py  inference_tsmixer.py  prepare_data_before_catboost.py  prepare_data_before_tsmixer.py  train_catboost.py  train_tsmixer.py
